--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "Api with Nodejs for favorite movies",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./src/server.js",
+    "migrate": "knex migrate:latest"
   },
   "author": "Lucas Virmond",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "knex": "^2.3.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
